--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ td {
   border: 1px solid rgb(160 160 160);
   padding: 8px 10px;
 }
-thead {
-  background-color: rgb(228 240 245);
+tr:nth-child(-n+5){
+    background-color: rgb(51, 51, 252);
 }
+thead th{
+    background-color: rgb(228 240 245);
+  }
