--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "Rubik", sans-serif;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -45,4 +46,19 @@ thead th {
 }
 .form-control {
   border-left: none !important;
+}
+.card{
+  padding: 10px;
+}
+#small_img {
+  height: 100%;
+}
+#price {
+  background: #FDD446;
+  width: max-content;
+  white-space: nowrap;
+}
+#buyBtn {
+  background: linear-gradient(90deg, #FDD446 0%, #F79B47 100%);
+  height: 37px;
 }
