--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
   padding: 0;
   margin: 0;
 }
+.row{
+  margin: 0 !important;
+}
 table {
   border: 2px solid black;
   border-collapse: collapse;
@@ -61,4 +64,10 @@ thead th {
 #buyBtn {
   background: linear-gradient(90deg, #FDD446 0%, #F79B47 100%);
   height: 37px;
+}
+#registr {
+  background: #FDD446;
+}
+#auth {
+  border: 2px solid #FDD446;
 }
