--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@
     padding: 0;
     margin: 0;
 }
-h2{
-  margin-top: 30px !important;
+h2 {
+    margin-top: 30px !important;
 }
 .row {
     margin-right: 0 !important;
@@ -21,8 +21,8 @@ table {
 }
 th,
 td {
-    border: 1px solid rgb(160 160 160);
-    padding: 8px 10px;
+    border: 1px solid rgb(160 160 160) !important;
+    padding: 8px 10px !important;
 }
 tr:nth-child(-n + 5) {
     background-color: rgb(51, 135, 252);
@@ -122,5 +122,44 @@ b {
     color: red;
 }
 .inputGroup {
-  margin-top: 10px;
+    margin-top: 10px;
+}
+#secondTask {
+    position: relative;
+}
+#circle_1 {
+    position: absolute;
+    width: 364.62px;
+    height: 335px;
+    top: 200px;
+    left: -235px;
+    opacity: 50%;
+    background: #FDD44680;
+    box-shadow: 0px 0px 150px 150px #FDD44680;
+    border-radius: 50%;
+    z-index: -30;
+}
+#circle_2 {
+    position: absolute;
+    width: 550px;
+    height: 550px;
+    top: 1329px;
+    right: -235px;
+    opacity: 50%;
+    background: #FDD44680;
+    box-shadow: 0px 0px 150px 150px #FDD44680;
+    border-radius: 50%;
+    z-index: -30;
+}
+#circle_3 {
+    position: absolute;
+    width: 768px;
+    height: 705.31px; 
+    margin: 0 auto;
+    bottom: 0px;
+    opacity: 50%;
+    background: #FDD44680;
+    box-shadow: 0px 0px 150px 150px #FDD44680;
+    border-radius: 50%;
+    z-index: -30;
 }
