--- a/style.css
+++ b/style.css
@@ -5,11 +5,32 @@
     margin: 0;
 }
 h2 {
-    margin-top: 30px !important;
+    margin: 30px !important;
 }
 .row {
     margin-right: 0 !important;
     margin-left: 0 !important;
+}
+body {
+    overflow-x: hidden;
+    position: absolute;
+}
+.card-img-top {
+    border-radius: 0px !important;
+}
+#topHeader {
+    margin: 0;
+    width: 100vw;
+    z-index: 3;
+    height: 40px;
+    position: fixed;
+    background-color: rgb(229, 245, 242);
+}
+.nav-link {
+    font-size: 14px;
+}
+#firstTask {
+    margin-top: 60px;
 }
 table {
     border: 2px solid black;
@@ -55,6 +76,7 @@ thead th {
     border-left: none !important;
 }
 .card {
+    background-color: transparent !important;
     padding: 10px;
 }
 #small_img {
@@ -77,11 +99,13 @@ thead th {
 }
 
 footer {
+    margin-top: 80px;
+    padding: 40px 40px 0 40px;
     background-color: #fdd446;
 }
 .list-group li {
     font-size: 18px;
-    margin-top: 30px;
+    margin-top: 20px;
 }
 b {
     font-size: 20px;
@@ -102,6 +126,7 @@ b {
     margin-top: 20px;
 }
 .page-link {
+    background-color: transparent !important;
     font-weight: 700;
     color: black !important;
     border: none !important;
@@ -127,39 +152,32 @@ b {
 #secondTask {
     position: relative;
 }
-#circle_1 {
+.circles {
     position: absolute;
+    opacity: 50%;
+    background: #fdd44680;
+    box-shadow: 0px 0px 150px 150px #fdd44680;
+    border-radius: 50%;
+    z-index: -30;
+}
+#circle_1 {
     width: 364.62px;
     height: 335px;
     top: 200px;
     left: -235px;
-    opacity: 50%;
-    background: #FDD44680;
-    box-shadow: 0px 0px 150px 150px #FDD44680;
-    border-radius: 50%;
-    z-index: -30;
 }
 #circle_2 {
-    position: absolute;
     width: 550px;
     height: 550px;
     top: 1329px;
     right: -235px;
-    opacity: 50%;
-    background: #FDD44680;
-    box-shadow: 0px 0px 150px 150px #FDD44680;
-    border-radius: 50%;
-    z-index: -30;
 }
 #circle_3 {
-    position: absolute;
     width: 768px;
-    height: 705.31px; 
+    height: 705.31px;
     margin: 0 auto;
     bottom: 0px;
-    opacity: 50%;
-    background: #FDD44680;
-    box-shadow: 0px 0px 150px 150px #FDD44680;
-    border-radius: 50%;
-    z-index: -30;
+}
+#registrationForm {
+    padding-left: 30px;
 }
